# center

./: Cargo.toml  README.md  center.toml  run.sh  server.sh
center/: Cargo.toml
center/src/: app_state.rs  auth.rs  config.rs  main.rs  plugin.rs  post.rs  reg.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs  reg.rs  server_log.rs  utils.rs
plugin_log/: Cargo.toml
plugin_log/src/: get.rs  main.rs
plugin_screen/: Cargo.toml
plugin_screen/src/: main.rs  post.rs
plugin_shutdown/: Cargo.toml
plugin_shutdown/src/: get.rs  main.rs
plugin_sys_stat/: Cargo.toml
plugin_sys_stat/src/: get.rs  main.rs
plugin_wol/: Cargo.toml
plugin_wol/src/: device_list.rs  get.rs  main.rs  post.rs
reg/: Cargo.toml
reg/src/: lib.rs
systemd/: rust-server.sh
