[package]
name = "center"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = { version = "4", features = ["openssl"] }
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.20"
openssl = "0.10.57"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

common = { path = "../common" }
