[package]
name = "plugin_wol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
log = "0.4.20"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
wol-rs = "1.0.1"

common = { path = "../common" }
surge-ping = "0.8.0"
